2007-04-19  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: add OCI8::NCLOB and add new method to bind
	    CLOB/NCLOB/BLOB.
	* ext/oci8/lob.c: add OCILobLocator#create_temporary.
	* test/test_oci8.rb: add two testcases for BINARY_FLOAT and
	    CLOB/NCLOB/BLOB.

2007-04-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/handle.c, ext/oci8/oci8.h, ext/oci8/stmt.c
	  lib/oci8.rb.in: change the internal structure to enable
	    OCIBind#set(anOCIHandle).

2007-04-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c, ext/oci8/lob.c, lib/oci8.rb.in: fix a problem
	    when reading NCLOB.
	    (This problem is reported by Dmitry Zadvornykh.)
	* lib/oci8.rb.in: fix a probmen when fetching BINARY_FLOAT.
	    (This problem is reported by Duncan McCaffery.)

2007-04-16  KUBO Takehiro  <kubo@jiubao.org>
	* ruby-oci8.spec: add a rpm spec file. (contributed by Brian Candler)
	* dist-files: add ruby-oci8.spec.
	* ext/oci8/oraconf.rb: fix for oracle 8.x and gcc on AIX.

2007-02-14  Oracle Corporation (commited by KUBO Takehiro <kubo@jiubao.org>)
	* lib/oci8.rb.in: add a private method parse_connect_string to support
	    "username/password[@(tns_name|//host[:port]/service_name)][ as (sysdba|sysoper)]".
	* test/test_connstr.rb: add test cases for parse_connect_string.
	* test/test_all.rb: call test cases for parse_connect_string.

2007-01-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h: add TO_ORATEXT, TO_CHARPTR and RSTRING_ORATEXT
	    macros to suppress 'differ in signedness' warinings.
	* ext/oci8/attr.c, ext/oci8/bind.c, ext/oci8/error.c, ext/oci8/lob.c,
	  ext/oci8/ocinumber.c, ext/oci8/oranumber.c, ext/oci8/server.c,
	  ext/oci8/stmt.c: use TO_ORATEXT, TO_CHARPTR and RSTRING_ORATEXT
	    macros to suppress 'differ in signedness' warinings.

2007-01-20  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: don't call OCIEnv.create when initializing.
	* release as 1.0.0-rc1.

2007-01-19  KUBO Takehiro  <kubo@jiubao.org>